--- a/style.css
+++ b/style.css
@@ -553,7 +553,7 @@ article .github__button-icon:not(:last-child) {
 
 .show-nav {
   top: 50%;
-  overflow: scroll;
+  overflow: auto;
   height: 100%;
   padding: 3rem;
   padding-top: 12rem;
