Add StayFitShop to Portfolio

--- a/style.css
+++ b/style.css
@@ -142,6 +142,23 @@ article img {
   margin-bottom: 3.4rem;
 }
 
+.article__video-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-bottom: 3rem;
+}
+
+article video {
+  max-width: 30rem;
+}
+
 article .github__button-icon:not(:last-child) {
   margin-right: 1rem;
 }
@@ -868,7 +885,7 @@ article .github__button-icon:not(:last-child) {
   }
 }
 
-@media only screen and (max-width: 350px) {
+@media only screen and (max-width: 650px) {
   .hero .ios__image {
     display: none;
   }
@@ -923,6 +940,113 @@ article .github__button-icon:not(:last-child) {
   100% {
     -webkit-transform: translate((0, 0));
     transform: translate((0, 0));
+  }
+}
+
+/* StayFitShop */
+.stayfitshop {
+  min-height: 80rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+  -ms-flex-pack: space-evenly;
+  justify-content: space-evenly;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background-image: url(/img/stay-fit-shop/stayfitshop-background.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.stayfitshop-img {
+  background-image: url(/img/stay-fit-shop/header-image.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.stayfitshop__slider-container {
+  width: 33rem;
+}
+
+.stayfitshop__slider-container img {
+  display: block;
+  max-width: 100%;
+}
+
+.stayfitshop__slider .slider__icon {
+  fill: rgba(0, 0, 0, 0.6);
+}
+
+.stayfitshop__info {
+  max-width: 43rem;
+  margin: 0 3rem;
+}
+
+.stayfitshop__info h2 {
+  font-weight: 400;
+  font-size: 3.6rem;
+}
+
+.stayfitshop__info p {
+  font-size: 1.6rem;
+  font-weight: 200;
+  line-height: 3rem;
+  margin: 4rem 0;
+}
+
+.stayfitshop__cta {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.stayfitshop__cta a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.stayfitshop__cta a:not(:last-child) {
+  margin-right: 1rem;
+}
+
+@media only screen and (max-width: 870px) {
+  .stayfitshop {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+
+  .stayfitshop__info {
+    margin-bottom: 3rem;
+    margin-top: 3rem;
+  }
+
+  .stayfitshop__cta {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+
+  .stayfitshop__cta a:not(:last-child) {
+    margin-right: 0;
+  }
+}
+
+@media only screen and (max-width: 350px) {
+  .stayfitshop__slider-container {
+    width: 28rem;
   }
 }
 
