-Add profile picture to homepage -Add MoreApps section to homepage -Add images for app icons and github readme screenshots

--- a/style.css
+++ b/style.css
@@ -305,6 +305,21 @@ article .github__button-icon:not(:last-child) {
   width: 2.7rem;
 }
 
+.text__button {
+  -webkit-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.text__button::after {
+  content: ">";
+  margin-right: 1rem;
+}
+
+.text__button:hover {
+  color: rgb(195, 30, 0);
+}
+
 .email-address {
   margin-top: 2rem;
   opacity: 0;
@@ -478,6 +493,21 @@ article .github__button-icon:not(:last-child) {
   margin-right: 1rem;
 }
 
+.separator {
+  display: block;
+  height: 1px;
+  width: 100%;
+  margin: 1rem 0;
+}
+
+.dark-bg {
+  background-color: rgb(44, 44, 46);
+}
+
+.white-bg {
+  background-color: white;
+}
+
 /* HEADER */
 .header__button {
   position: fixed;
@@ -574,6 +604,7 @@ article .github__button-icon:not(:last-child) {
 }
 
 .header__nav {
+  width: 100%;
   position: fixed;
   top: -100%;
   left: 50%;
@@ -597,6 +628,8 @@ article .github__button-icon:not(:last-child) {
 .header__nav-item {
   color: white;
   text-align: center;
+  margin: 0 auto;
+  max-width: 25rem;
   margin-bottom: 3rem;
 }
 
@@ -674,10 +707,33 @@ article .github__button-icon:not(:last-child) {
   animation-duration: 1s;
 }
 
-.hero__text {
+.hero__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   position: absolute;
   top: 35%;
   left: 17rem;
+}
+
+.hero__info-img {
+  display: block;
+  border-radius: 100rem;
+  max-width: 25rem;
+  max-height: 25rem;
+  -webkit-box-shadow: 1px 2px 6px rgba(0, 0, 0, 0.6);
+  box-shadow: 1px 2px 6px rgba(0, 0, 0, 0.6);
+  -webkit-animation-name: slideInFromLeft;
+  animation-name: slideInFromLeft;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+}
+
+.hero__text {
+  padding-left: 8rem;
 }
 
 .hero__text-intro {
@@ -759,7 +815,7 @@ article .github__button-icon:not(:last-child) {
 
 .hero__text .line__dots {
   position: absolute;
-  left: -4rem;
+  left: 29rem;
   -webkit-animation-name: slideInFromLeft;
   animation-name: slideInFromLeft;
   -webkit-animation-duration: 1s;
@@ -809,6 +865,14 @@ article .github__button-icon:not(:last-child) {
   .hero .p__figure-small {
     display: none;
   }
+
+  .hero__info {
+    left: 10rem;
+  }
+
+  .hero__text {
+    padding-left: 4rem;
+  }
 }
 
 @media only screen and (max-width: 1000px) {
@@ -816,12 +880,44 @@ article .github__button-icon:not(:last-child) {
     min-height: 60rem;
   }
 
-  .hero__text {
+  .hero__info {
     left: 8rem;
   }
 
   .hero .ios__image {
-    width: 35rem;
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .hero__info-img {
+    width: 13rem;
+    height: 13rem;
+  }
+
+  .hero__text {
+    left: 3rem;
+    margin-right: 2.5rem;
+  }
+
+  .hero__text span {
+    font-size: 3rem;
+  }
+
+  .hero__text h1 {
+    font-size: 4.2rem;
+  }
+
+  .hero__text-desc {
+    font-size: 2.2rem;
+  }
+
+  .hero__cta span {
+    font-size: 2.4rem;
+  }
+
+  .hero__info .line__dots {
+    left: 15rem;
   }
 }
 
@@ -830,25 +926,28 @@ article .github__button-icon:not(:last-child) {
     min-height: 100vh;
   }
 
-  .hero__text {
-    left: 3rem;
-    margin-right: 3rem;
+  .hero__info {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: row-reverse;
+    flex-direction: row-reverse;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    left: 0;
+    padding-right: 3rem;
   }
 
-  .hero__text span {
-    font-size: 3.5rem;
+  .hero__info .line__dots {
+    left: 0;
   }
 
-  .hero__text h1 {
-    font-size: 4.8rem;
-  }
-
-  .hero__text-desc {
-    font-size: 3.8rem;
-  }
-
-  .hero__cta span {
-    font-size: 3rem;
+  .hero__info-img {
+    position: absolute;
+    top: -6rem;
+    right: 3rem;
+    width: 8rem;
+    height: 8rem;
   }
 
   .hero__icon {
@@ -1247,6 +1346,116 @@ article .github__button-icon:not(:last-child) {
   .open__weather-slider-container {
     width: 28rem;
   }
+}
+
+/* MORE APPS SECTION */
+.moreApps {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin: 3rem 0;
+}
+
+.moreApps h2 {
+  font-size: 3.6rem;
+  font-weight: 400;
+}
+
+.moreApps__grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: auto 4rem auto;
+  grid-template-columns: repeat(2, auto);
+  gap: 4rem;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: start;
+  max-width: 100rem;
+  margin: 6rem auto;
+  padding: 0 3rem;
+}
+
+@media only screen and (max-width: 700px) {
+  .moreApps__grid {
+    grid-template-columns: repeat(1, auto);
+  }
+}
+
+.moreApps__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: rgb(242, 242, 247);
+  border-radius: 1.5rem;
+  padding: 1.5rem;
+  max-width: 40rem;
+  -webkit-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.moreApps__item:hover {
+  -webkit-box-shadow: 1px 1px 12px rgba(0, 0, 0, 0.18);
+  box-shadow: 1px 1px 12px rgba(0, 0, 0, 0.18);
+}
+
+.moreApps__item-logo {
+  margin-right: 1.4rem;
+}
+
+.moreApps__item-logo img {
+  display: block;
+  width: 5rem;
+  height: 5rem;
+  border-radius: 1rem;
+}
+
+.moreApps__item h4 {
+  font-size: 1.6rem;
+  margin-bottom: 0.5rem;
+}
+
+.moreApps__item p {
+  font-size: 1.4rem;
+  margin-bottom: 1.4rem;
+  line-height: 1.6;
+}
+
+.moreApps__item-buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.moreApps__item-buttons > * {
+  width: 100%;
+}
+
+.moreApps__item-buttons a {
+  color: black;
+  text-decoration: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin-left: 1rem;
+}
+
+.moreApps__item-buttons a:not(:last-child) {
+  border-right: 1px solid rgb(44, 44, 46);
+}
+
+.moreApps__item-buttons a:first-child {
+  margin-left: 0;
 }
 
 /* PORTFOLIO ITEM */
